fix height of the terminal + update h1 header

--- a/template.html
+++ b/template.html
@@ -26,11 +26,11 @@ body, html {
 .term {
 	position: fixed;
 	bottom: 0;
-	height: 300px;
+	height: 250px;
 	left: 0;
 	right: 0;
 }
-.terminal {
+.term .terminal {
 	height: 100%;
 }
 main {
